some refactoring changes;